truth-engine/api/tests/ui/exhaustive_zk_error.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
 --> tests/ui/exhaustive_zk_error.rs:5:11
  |
5 |     match e {
  |           ^ pattern `_` not covered
  |
note: `ZkError` defined here
 --> src/error.rs
  |
  | pub enum ZkError {
  | ^^^^^^^^^^^^^^^^
  = note: the matched value is of type `ZkError`
  = note: `ZkError` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
  |
14~         ZkError::RebindingMismatch => {},
15+         _ => todo!()
  |
